# scriberr-desktop

./: package-lock.json  package.json
src/: package-lock.json  package.json
src-tauri/: .env  Cargo.toml  Info.plist  scriberr.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241207120000_init.sql
src-tauri/src/: discovery.rs  error.rs  lib.rs  main.rs  mixer.rs  recorder.rs
src-tauri/src/services/: audio.rs  db.rs  discovery.rs  mixer.rs  mod.rs  proxy.rs  storage.rs  sync.rs
src/src/: App.tsx  RecordingsWindow.tsx  index.css  main.tsx  types.ts
src/src/components/: AppSelector.tsx  ConnectivityIndicator.tsx  Controls.tsx  MicSelector.tsx  RecordingList.tsx  ReviewScreen.tsx  ScriberrTextLogo.tsx  SettingsScreen.tsx  SetupScreen.tsx  Timer.tsx  TitleBar.tsx
src/src/components/ui/: Tooltip.tsx
src/src/features/audio/: AudioVisualizer.tsx  EmberPlayer.tsx  ProxyContext.tsx  useProxyUrl.ts
src/src/features/dashboard/: DashboardWindow.tsx
src/src/features/onboarding/: OnboardingScreen.tsx
src/src/features/recorder/: RecorderScreen.tsx  RecorderWindow.tsx  Visualizer.tsx
src/src/features/recording/: AppSelector.tsx  Controls.tsx  MicSelector.tsx  RecordingScreen.tsx  SetupScreen.tsx  Timer.tsx
src/src/features/recording/api/: useApps.ts  useFileExistence.ts  useMicrophones.ts  useRecordingControls.ts  useRecordingStatus.ts
src/src/features/recording/components/: Controls.tsx  Timer.tsx
src/src/features/settings/: SettingsScreen.tsx
src/src/features/settings/api/: useSettings.ts
src/src/features/shell/: TitleBar.tsx
src/src/features/transcription/: TranscriptionView.tsx
