[package]
name = "scriberr-companion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scriberr_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = "0.2.0"
hound = "3.5.1"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
core-media = "0.5.1"
core-foundation = "0.10.1"
core-media-sys = "0.1.2"
cpal = "0.15.2"
ringbuf = "0.3.3"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.17"
specta = { version = "=2.0.0-rc.20", features = ["serde", "derive"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "javascript", "typescript"] }
validator = { version = "0.20.0", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
